--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
                 </a>
                 <div class="header__official">
-                    Официальный представитель
+                    Официальный представитель 
                     <span>Garmin, Polar, Suunto</span>
 
                 </div>
@@ -52,9 +52,42 @@
                     или 
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
                 </div>
-
             </div>
             
+        </div>
+    </div>
+    <div class="advantages">
+        <div class="container">
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <img src="icons/advantages/cup.png" alt="куб" class="advantages__icon">
+                    <div class="advantages__subtitle">
+                        Делимся опытом
+                    </div>
+                    <div class="advantages__descr">
+                        Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/advantages/heart.png" alt="сердце" class="advantages__icon">
+                    <div class="advantages__subtitle">
+                        Заботимся о здоровье
+                    </div>
+                    <div class="advantages__descr">
+                        Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/advantages/shoe.png" alt="кроссовок" class="advantages__icon">
+                    <div class="advantages__subtitle">
+                        Учим бегать
+                    </div>
+                    <div class="advantages__descr">
+                        Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a> 
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
