--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/slick.css"/>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -71,7 +75,7 @@
                     </div>
                 </div>
                 <div class="advantages__item">
-                    <img src="icons/advantages/heart.png" alt="сердце" class="advantages__icon">
+                    <img src="icons/advantages/heart.png" alt="сердце" class="advantages__icon advantages__icon_animated">
                     <div class="advantages__subtitle">
                         Заботимся о здоровье
                     </div>
@@ -439,7 +443,7 @@
     <section class="reviews">
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
-            <div class="reviews__item">
+            <div class="reviews__item  animate__animated animate__backInUp">
                 <img src="img/feed_1.png" alt="фото девушки" class="reviews__img">
                 <div class="reviews__text">
                     <div class="reviews__subtitle">
@@ -457,7 +461,7 @@
                     </div>
                 </div>           
             </div>
-            <div class="reviews__item">
+            <div class="reviews__item animate__animated animate__backInUp">
                 <img src="img/feed_2.png" alt="фото девушки" class="reviews__img">
                 <div class="reviews__text">
                     <div class="reviews__subtitle">
@@ -473,7 +477,7 @@
                     </div>
                 </div>           
             </div>
-            <div class="reviews__item">
+            <div class="reviews__item animate__animated animate__backInUp">
                 <img src="img/feed_3.png" alt="фото девушки" class="reviews__img">
                 <div class="reviews__text">
                     <div class="reviews__subtitle">
